# CrowdLabel-QC

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  BRANCHING.md  LICENSE  README.md  pyproject.toml  tagging-report-20251116-194516.csv
docs/: ASSIGNMENT_FLOW.md  REPORTS.md
qcc/: __init__.py
src/: report_fixer.py
src/qcc/: __init__.py
src/qcc/cli/: main.py
src/qcc/config/: default.yml  schema.py
src/qcc/data_ingestion/: __init__.py  mysql_config.py  mysql_importer.py  tag_prompt_dataset.py
src/qcc/domain/: characteristic.py  comment.py  enums.py  prompt.py  tag.py  tagassignment.py  tagger.py
src/qcc/io/: csv_adapter.py  db_adapter.py
src/qcc/metrics/: __init__.py  agreement.py  agreement_strategy.py  default_strategies.py  error_correcting_code_strategy.py  interfaces.py  pattern_strategy.py  patterns.py  speed.py  speed_strategy.py  spotcheck_equivalence_strategy.py  taggercount.py
src/qcc/metrics/utils/: pattern.py
src/qcc/reports/: characteristic_reliability.py  pattern_detection_report.py  tag_report.py  tagger_performance.py
tests/: __init__.py  conftest.py  test_agreement_signatures.py  test_assignment_id_ingestion.py  test_cli_pattern_report_fix.py  test_cli_questionnaire_ingestion.py  test_cli_run_overrides.py  test_cli_smoke.py  test_cli_summary.py  test_db_adapter.py  test_domain_basics.py  test_pattern_detection_report.py  test_reports_tag_report.py  test_tag.py  test_tagger_metrics_smoke.py  test_tagger_performance.py  test_tagger_signals_signatures.py
tests/cli/: test_run_analysis.py
tests/data/: min.csv
tests/data_ingestion/: test_mysql_config.py  test_tag_prompt_dataset.py
tests/metrics/: test_agreement_strategy.py  test_pattern_strategy.py  test_speed_strategy.py
